--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@ footer a {
   font-size: 16px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+  font-weight: bold;
 }
 .joinBtn{
   background-color: #2b9b90;
@@ -98,7 +99,7 @@ footer a {
   grid-template-columns: 230px 1fr;
 }
 .sideBar{
-  background-color: #14161e;
+  background-color: #1e2230;
   padding: 16px;
   color: #ebe3e3;
   height: 97vh;
@@ -141,4 +142,8 @@ footer a {
 }
 .leaveBtn:hover{
   background-color: #1e6e66;
+}
+.CodeMirror{
+  min-height: 100vh;
+  font-size: 20px;
 }
